# lab_1_python

./: .gitignore  README.md  pyproject.toml
src/: calculator.py  constants.py  exceptions.py  main.py
tests/: test_calculator.py
