[project]
name = "lab_1_python"
version = "0.1.0"
description = "Сonsole calculator for python"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.4.2",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true
